--- a/evaluacion/document.tex
+++ b/evaluacion/document.tex
@@ -1,6 +1,12 @@
-%%This is a very basic article template.
+
+%
+%This is a very basic article template.
 %%There is just one section and two subsections.
 \documentclass{article}
+
+\usepackage[utf8]{inputenc}
+\usepackage[spanish]{babel}
+
 \title{Algoritmo de evaluación}
 \begin{document}
 \maketitle
