--- a/cluster.tex
+++ b/cluster.tex
@@ -12,11 +12,12 @@
 %% ambientes de teoremas
 \newtheorem{problema}{Problema}
 
+
+
 \author{Leonardo Andrés Jofré Flor}
-\title{Metodo de clasificación y visualización de grupos probabilistas}
+\title{Metodo de clasificación probabilista}
 
 \begin{document}
-
 % definir lo que es una tupla
 Sea un conjunto aleatorio de tuplas en $T=\{x_i\}$ se busca obtener la función
 de densidad de probabilidad $p:\mathbb{R}^n\to[0,1]$
@@ -36,6 +37,11 @@ Aproximación de la función de densidad acumulada, caso elemental
 % la función de densidad de puede aproximar a la combinación lineal de funciones
 
 Si consideramos la función indicatriz
+$p_\epsilon(x,y)$
+\begin{eqnarray*}
+1 &si& \|x\|\leq \epsilon\\
+0 &si& \|x\| > \epsilon\\
+\end{eqnarray*}
 $$p_\epsilon(x,y)=1 si \|x\|\le \epsilon$$
 
 $\sum c_{i,j}p_\epsilon(x-x_i,y-y_j)$
@@ -54,10 +60,21 @@ $\sum c_{i,j}p_\epsilon(x-x_i,y-y_j)$
 \subsection{Anexos}
 
 \begin{problema}
+	Sea $$\Phi = \{(x,y)\in \mathbb{R}^2| (x,y) \in
+	\texttt{convexhull}\left(p_1,p_2,p_3,p_4 \right) \}$$ encontrar una transformación desde $\Phi$ a $P$
+	
+\end{problema}
+
+\begin{problema}
 	Sea $f:\mathbb{R}^2\to\mathbb{R}$ y sea $\partial A$ la curva orientada en
 	sentido antihorario por los punros $p_1,p_2,p_3,p_4$ encontrar el cambio de
 	variable adecuado para encontrar
 	$$\int_A f(x,y)dA$$
 \end{problema}
+
+\begin{problema}
+	  
+\end{problema}
+
 
 \end{document}
