--- a/ordenar funciones/ordenar funciones.tex
+++ b/ordenar funciones/ordenar funciones.tex
@@ -8,16 +8,25 @@
 \begin{document}
 \maketitle
 consideremos $f$ función continua en $[a,b]$, la función de
-distribución de las imagenes $f\left([a,b]\rigt)$ está dado por la
+distribución de las imagenes $f\left([a,b]\right)$ está dado por la
 transformación de variable aleatoria de la distribución uniforme en
 [a,b]
 
+\begin{def}
+  Una funcion ordenada es ... 
+\end{def}
+Una funcion ordanada comparte algunas propiedades con la funcion
+original $f$, por elemplo, la longitud de la funcion $f$ y $\tilda(f)$
+debe tener la misma area bajo la curva en el intervalo en donde fueron
+ordenadas y la misma longitud de arco.
 \begin{theorem} La funcion de distrinucion acumulada de una variable
   aleatoria $Y=f\leftX\rigth)$ donde $X\sim U\left(a,b\rigt)$  
 \end{theorem}
 
-$rec(f)\sim F_f$ la función de orden de $f$ está dada por $sort(f) =
+$rec(f)\sim F_f$ la función de orden de $f$ está dada por $tilda(f) =
 f(F_f(f(x)))$
 
 Sea $f:\[a,b\]\to\mathbb{R}$
+
+
 \end{document}
