agregar el nuevo modelo de gravimetria

--- a/relacion entre variables aleatorias/teoria.tex
+++ b/relacion entre variables aleatorias/teoria.tex
@@ -1,10 +1,15 @@
 \documentclass{article}
 
+
 \begin{document}
-$X\sim p_x(t)$
-$Y = f(X)\sim p_y(x)$
+
+relación entre variables aleatorias La covarianza es valor real que
+indica la relación entre dos conjuntos de valores numéricos $X$ es
+$X\sim p_x(t)$ $Y = f(X)\sim p_y(x)$
 
 problema: encontrar la función $f$
 
-$f(t) = F^{-1}_Y(F_X(t))$
+La solución para este problema es de la forma $f(t) =
+F^{-1}_Y(F_X(t))$, en donde $F_X$ es función de distrinbución
+acumulada de $X$ y $F_Y$ es la distribución acumulada de $Y$
 \end{document}
